fix: Use correct `border-radius` for collapsed commit status

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -435,7 +435,7 @@ $bg: "/img/bg.webp";
 }
 
 .pf-c-card--lastcommit {
-  @media screen and (max-width: 825px) {
+  @media screen and (max-width: 760px) {
     border-radius: 0;
   }
 }
